corfu: Goodix TP doesn't work due to FPS reset
WHY:TP stops working because vcc gpio is pull-down after FPS reset
WHAT:Remove vcc pull-down in FPS driver

Change-Id: Ic0f1756aa225d42141210f4cc5873e0b202ce5b3
Reviewed-on: https://gerrit.mot.com/2536243
SME-Granted: SME Approvals Granted
Reviewed-by: Marcelo Pincinato <mpcinato@motorola.com>
Submit-Approved: Marcelo Pincinato <mpcinato@motorola.com>
Tested-by: Marcelo Pincinato <mpcinato@motorola.com>
SLTApproved: Deise Alves <deisema@motorola.com>
(cherry picked from commit 2add0aa9d7cf7855e36c4c56edd380b80ef784f3)
Reviewed-on: https://gerrit.mot.com/2539671
Tested-by: Jira Key
Reviewed-by: Douglas do Vale <dtvale@motorola.com>
SLTApproved: Douglas do Vale <dtvale@motorola.com>
Submit-Approved: Douglas do Vale <dtvale@motorola.com>
Tested-by: Douglas do Vale <dtvale@motorola.com>

--- a/drivers/input/misc/fpc_fps_mmi/Kconfig
+++ b/drivers/input/misc/fpc_fps_mmi/Kconfig
@@ -14,3 +14,11 @@ config INPUT_MISC_FPC1020_SAVE_TO_CLASS_DEVICE
          sysfs.
 	 If unsure, say N.
 
+config FPC_SHARE_GPIO
+	bool "TP stops working because vcc gpio is pull-down after FPS reset"
+	default n
+	depends on INPUT_MISC_FPC1020
+	help
+	 Say Y here if you wish to Remove vcc pull-down in FPS driver
+	 If unsure, say N.
+
