cofud: Add coful fingerprint modules
Signed-off-by: electimon <electimon@gmail.com>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -855,4 +855,8 @@ source "drivers/input/misc/ets_fps_mmi/Kconfig"
 
 source "drivers/input/misc/fpc_fps_mmi/Kconfig"
 
+source "drivers/input/misc/focaltech_fps/Kconfig"
+
+source "drivers/input/misc/chipone_fps/Kconfig"
+
 endif
